Fixed alignment of buttons in Genomespace Importer

--- a/client/galaxy/style/less/ui.less
+++ b/client/galaxy/style/less/ui.less
@@ -881,7 +881,7 @@
 
 .ui-gs-select-file {
     .ui-gs-filename-textbox {
-        float: left;
+        float: right;
         width: ~'calc(100% - 76px)';
     }
     .ui-gs-token-textbox {
@@ -889,6 +889,7 @@
         width: ~'calc(100% - 76px)';
     }
     .ui-gs-browse-button {
+        float: left;
         .ui-button-icon {
             margin-top: 3px;
             margin-right: 5px;
